# claw-morning-brief

./: .env.example  .gitignore  README.md  openclaw.json  pyproject.toml
scripts/: ec2-userdata.sh  setup.sh
workspace/: HEARTBEAT.md  SOUL.md  TOOLS.md
